--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Ecom-Catalog-API
+
+spring.datasource.url=jdbc:h2:mem:~/test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=digisha_ecom
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
