--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.application.name=Ecom-Catalog-API
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.datasource.url=jdbc:h2:mem:~/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=digisha_ecom
-
-
-spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
+spring.sql.init.mode=never
+
